objects/User.object
<CustomObject>
    <fields>
        <fullName>SVMXC__FaceTime_ID__c</fullName>
        <description>User&apos;s FaceTime login ID. Used to make FaceTime calls in ServiceMax iPad Client. If this is left blank, user&apos;s phone number and email are used for the call.</description>
        <inlineHelpText>Enter this user&apos;s FaceTime login ID if available. This is used to make FaceTime calls in ServiceMax iPad Client. If this is left blank, user&apos;s phone number and email are used for the call.</inlineHelpText>
        <label>FaceTime ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Is_Super_Dispatcher__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to indicate if user is Super Dispatcher.</description>
        <inlineHelpText>Flag to indicate if user is Super Dispatcher.</inlineHelpText>
        <label>Is Super Dispatcher?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__Select__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Select</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__ServiceMax_User__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to indicate if User is a ServiceMax User</description>
        <label>ServiceMax User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Salutation__c</fullName>
        <label>Personal Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Swap_Home_Page_Section__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Swap Home Page Section</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TERM_DT__c</fullName>
        <label>Term Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Territory__c</fullName>
        <label>Territory</label>
        <picklist>
            <picklistValues>
                <fullName>EM-CE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EM-NE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EM-SE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EM-IS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EM-SC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CCP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>STM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARM / CSR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Singapore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Taiwan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Korea</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>User_Number__c</fullName>
        <displayFormat>U-{00000}</displayFormat>
        <label>User Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>User_Previous_Session__c</fullName>
        <label>User Previous Session</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WD_EMT1__c</fullName>
        <label>Workday EMT1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WD_EMT2__c</fullName>
        <label>Workday EMT2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WD_Manager__c</fullName>
        <label>Workday Manager</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Workday_EMT1__c</fullName>
        <label>Workday_EMT1_DO_NOT_USE</label>
        <relationshipName>WD_EMT1</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>Workday_EMT2__c</fullName>
        <label>Workday_EMT2_DO_NOT_USE</label>
        <relationshipName>WD_EMT2</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>Workday_Manager__c</fullName>
        <label>Workday_Manager_DO_NOT_USE</label>
        <relationshipName>WD_Manager</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__EchoSign_Allow_Delegated_Sending__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EchoSign - Allow Sending As Other Users</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__EchoSign_Email_Verified__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox indicates that the user&apos;s email address has been validated in EchoSign API.</description>
        <inlineHelpText>This checkbox indicates that the user&apos;s email address has been validated in EchoSign API.</inlineHelpText>
        <label>EchoSign Email Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isHouseAccount__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checking whether the user is house account or not</description>
        <label>isHouseAccount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isMigrated_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Migrated Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>legal__c</fullName>
        <label>Legal</label>
        <relationshipName>Users</relationshipName>
        <restrictedAdminField>true</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>migEmail_Address__c</fullName>
        <label>MIG - Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>migGoLive_User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MIG - Go Live User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>migIsTest_User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MIG - Test User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>migPermission_Sets__c</fullName>
        <label>MIG - Permission Sets</label>
        <picklist>
            <picklistValues>
                <fullName>Oppty-Territory-Edit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kanji-Field Access-RW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kanji-Field Access-R</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Merge</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>migRecord_Owner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MIG - Record Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>migUserRole__c</fullName>
        <label>MIG - User Role</label>
        <picklist>
            <picklistValues>
                <fullName>AX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA AX CE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AsiaPac AD CHN NORTH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA AD SIL VAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA AD AMT SPB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA AX GEO EAST CMW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA AD OPS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Japan AX MJR TM3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA AD GEO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA AX OPS Inside Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Region</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA Sales Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Japan VP MJR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA AX GEO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Japan Sales Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India VP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA RVP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA VP GEO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AsiaPac RVP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AsiaPac AX CHN NORTH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India AX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India RVP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Japan AD MJR TM3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AsiaPac VP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA RVP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System Administrator</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>migUser_Profile__c</fullName>
        <label>MIG - User Profile</label>
        <picklist>
            <picklistValues>
                <fullName>Integration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.3 - Sales Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.1 - Sales Finance (Forecast)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.6 - Revenue Accounting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.1 - Inside Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.5 - Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.1 - Order Fulfillment - Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.2 - AXs/AMT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.2 - Order Fulfillment - User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.3 - Order Fulfillment - AP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.2 - WFO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.4 - Legal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.5 - Sales Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.3 - Account Directors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.4 - Regional Sales VPs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.7 - BP Approvers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.4 - Order Management - AP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.5 - Order Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.6 - Order Management-Index</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5.1 - Data StewardSystem Administrator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Read Only</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>mkto_si__IsCachingAnonWebActivityList__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCachingAnonWebActivityList</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto_si__IsCachingBestBets__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCachingBestBets</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto_si__IsCachingEmailActivityList__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCachingEmailActivityList</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto_si__IsCachingGroupedWebActivityList__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCachingGroupedWebActivityList</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto_si__IsCachingInterestingMomentsList__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCachingInterestingMomentsList</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto_si__IsCachingScoringList__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCachingScoringList</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto_si__IsCachingStreamList__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCachingStreamList</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto_si__IsCachingWatchList__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCachingWatchList</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto_si__IsCachingWebActivityList__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCachingWebActivityList</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto_si__Sales_Insight_Counter__c</fullName>
        <defaultValue>10</defaultValue>
        <label>Marketo Sales Insight Welcome Counter</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
	<fields>
        <fullName>CostCenter__c</fullName>
        <description>cost center of employee. Needed for NHM,</description>
        <label>CostCenter</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmployeeClass__c</fullName>
        <description>NHM Field</description>
        <inlineHelpText>NHM Field</inlineHelpText>
        <label>EmployeeClass</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NewHireFlag__c</fullName>
        <description>NHM Field</description>
        <inlineHelpText>NHM Field</inlineHelpText>
        <label>NewHireFlag</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OldLogin__c</fullName>
        <description>NHM Field</description>
        <inlineHelpText>NHM Field</inlineHelpText>
        <label>OldLogin</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Process__c</fullName>
        <formula>IF(ReHireFlag__c = &quot;Y&quot; &amp;&amp; NewHireFlag__c = &quot;Y&quot;,HYPERLINK(&quot;/apex/NHM_Main?id=&quot;&amp;EmployeeNumber  , &quot;RE-HIRE&quot; , &quot;_self&quot;),
IF(NewHireFlag__c =&quot;Y&quot; &amp;&amp; ReHireFlag__c != &quot;Y&quot;,HYPERLINK(&quot;/apex/NHM_Main?id=&quot;&amp;EmployeeNumber, &quot;NEW-HIRE&quot;, &quot;_self&quot;),
&quot;Already Submitted&quot;+HYPERLINK(&quot;/apex/NHM_Tickets?id=&quot;&amp;EmployeeNumber  , &quot;TICKET LIST&quot;, &quot;_NEW&quot;)
))</formula>
        <label>Process</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReHireFlag__c</fullName>
        <description>NHM Field</description>
        <inlineHelpText>NHM Field</inlineHelpText>
        <label>ReHireFlag</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RemFlag1__c</fullName>
        <defaultValue>false</defaultValue>
        <description>NHM Field</description>
        <inlineHelpText>NHM Field</inlineHelpText>
        <label>RemFlag1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RemFlag2__c</fullName>
        <defaultValue>false</defaultValue>
        <description>NHM Field</description>
        <inlineHelpText>NHM Field</inlineHelpText>
        <label>RemFlag2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RemFlagDate1__c</fullName>
        <description>NHM Field</description>
        <inlineHelpText>NHM Field</inlineHelpText>
        <label>RemFlagDate1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RemFlagDate2__c</fullName>
        <description>NHM Field</description>
        <inlineHelpText>NHM Field</inlineHelpText>
        <label>RemFlagDate2</label>
        <type>Date</type>
    </fields>
    <listViews>
        <fullName>AdminUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>EMPLOYEE_NUMBER</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.USERS.EMAIL</field>
            <operation>notContain</operation>
            <value>@cadence.com</value>
        </filters>
        <label>Admin Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>FULL_NAME</field>
            <operation>equals</operation>
            <value>Shawntee Jones</value>
        </filters>
        <label>Mski</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>IPCA_Approvers</fullName>
        <booleanFilter>1 OR  2 OR 3 OR 4 OR 5</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>SFCONTENT_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Login__c</field>
            <operation>equals</operation>
            <value>amirb,amjadq,arif,bbanerjee,bilas,bmurdock,bsalem,buchalik,celgert,dariuszk</value>
        </filters>
        <filters>
            <field>Login__c</field>
            <operation>equals</operation>
            <value>davem,ehsanr,ewanm,fmartin,henricks,hughes,jduda,jiyoon,jlupiens,jtam,kishorek</value>
        </filters>
        <filters>
            <field>Login__c</field>
            <operation>equals</operation>
            <value>kulansky,kyee,lims,maoliu,martinj,mjedrak,mzys,norrie,ojaved,pksr,rakeshpa</value>
        </filters>
        <filters>
            <field>Login__c</field>
            <operation>equals</operation>
            <value>ranvir,rjones,rpudota,rtokosh,sakowski,sarvesh,sgouros,Shri</value>
        </filters>
        <filters>
            <field>Login__c</field>
            <operation>equals</operation>
            <value>skaprow,ternullo,tomkelly,tomw,venky</value>
        </filters>
        <label>IPCA Approvers</label>
        <sharedTo>
            <group>X2_5_Sales_Operations_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Portal_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>Partner</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Portal Users</label>
        <sharedTo>
            <role>Operations</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Termed_Users_with_Apttus_Profile</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>TERM_DT__c</columns>
        <columns>Division__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TERM_DT__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>4_4 - Apttus Platform Profile</value>
        </filters>
        <label>Termed Users with Apttus Profile</label>
        <sharedTo>
            <role>System_Administrator</role>
        </sharedTo>
    </listViews>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Auto_Follow_Checked_for_Support_profiles</fullName>
        <active>false</active>
        <description>Auto Follow Reopened Cases should be checked for Support Profiles</description>
        <errorConditionFormula>AND
(
CONTAINS(Profile.Name, &apos;5_1 - Data Steward&apos;) ||
CONTAINS(Profile.Name, &apos;5_2_Support Administrator&apos;) ||
CONTAINS(Profile.Name, &apos;5_3_Support Manager/AE&apos;) ||
CONTAINS(Profile.Name, &apos;5_4_Support TFO AE&apos;),
Auto_Follow_Reopened_Cases__c = false
)</errorConditionFormula>
        <errorDisplayField>Auto_Follow_Reopened_Cases__c</errorDisplayField>
        <errorMessage>Auto Follow Reopened Cases should be checked for Support Profiles</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BMCServiceDesk__Validate_FootPrints_Login</fullName>
        <active>false</active>
        <description>Enable this validation rule to prevent users from editing the BMC Client Management Login ID. However, the users can delete the BMC Client Management Login ID.</description>
        <errorConditionFormula>IF(NOT(ISCHANGED(BMCServiceDesk__FPLoginID__c) ), false, IF(ISBLANK( BMCServiceDesk__FPLoginID__c), false, IF(BMCServiceDesk__FP_Login_Validated__c,false, true)))</errorConditionFormula>
        <errorMessage>You can delete a BMC Client Management Login ID from here but you cannot edit it.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Employment_Status_Cannot_be_Null</fullName>
        <active>true</active>
        <description>Employment Status is a required field</description>
        <errorConditionFormula>ISPICKVAL(Employment_Status__c,&apos;&apos;)</errorConditionFormula>
        <errorDisplayField>Employment_Status__c</errorDisplayField>
        <errorMessage>Please select a value for Employment Status</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Limit_User_Profile_Access</fullName>
        <active>true</active>
        <description>Specified fields will be read only to all users except Support/System Admin Profile and Operations Profile:</description>
        <errorConditionFormula>AND(
        NOT($Setup.UR_Bypass_Validation__c.Do_UR_Bypass_Validation__c = true),

$Profile.Name &lt;&gt; &quot;2_5 - Sales Operations&quot;,
$Profile.Name &lt;&gt; &quot;4_8 - WFO Operations&quot;,
$Profile.Name &lt;&gt; &quot;5_2_Support Administrator&quot;,
$Profile.Name &lt;&gt; &quot;System Administrator&quot;,
$Profile.Name &lt;&gt; &quot;System Administrator Custom&quot;,
$Profile.Name &lt;&gt; &quot;2_5 - Sales OperationsClone&quot;,
$Profile.Name &lt;&gt; &quot;3_1 - Order Fulfillment - ManagerClone&quot;,
$Profile.Name &lt;&gt; &quot;Customer Community Custom&quot;,
NOT($Profile.Name =&apos;5_1 - Data Steward&apos;), 
$User.LastName &lt;&gt; &apos;Migration&apos;, 
NOT($Profile.Name = &apos;Integration&apos;), 
 OR(
 ISCHANGED( Alias ) ,
 ISCHANGED( Email  ) ,
 ISCHANGED( EmployeeNumber ) ,
 ISCHANGED(  FirstName ) ,
 ISCHANGED(  LastName ) ,
 ISCHANGED(  ManagerId ) ,
 ISCHANGED(  Title ) ) 
)</errorConditionFormula>
        <errorDisplayField>EmailPreferences</errorDisplayField>
        <errorMessage>You do not have permission to update First Name, Last Name, Alias, Email, Employee Number, Manager and Title.
If assistance is required, please file an IT ticket for SalesForce</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>User_FirstName_Required</fullName>
        <active>true</active>
        <description>First Name is required</description>
        <errorConditionFormula>ISBLANK( FirstName )</errorConditionFormula>
        <errorDisplayField>FirstName</errorDisplayField>
        <errorMessage>First Name is required</errorMessage>
    </validationRules>
</CustomObject>